responsiveness(fix): fix the issues on small devices and fill the help section with new info provided

--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -60,6 +60,7 @@
 .sections {
   margin: 0;
   padding-top: 1px;
+  position: relative;
 }
 
 .section {
